tests/duarouter/errors/false_input_sumo/errors.duarouter
Error: File 'xxx.xml' is not accessible (No such file or directory).
Quitting (on error).
